# airbnb-clone-backend

./: README.md  build.sh  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  settings.py  urls.py
dms/: admin.py  apps.py  models.py
dms/migrations/: 0001_initial.py  0002_alter_chattingroom_user_alter_message_room_and_more.py
experiences/: admin.py  experienceTest.json  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py  0004_alter_perk_details.py
grammars/Inheritence/: main.py
grammars/__init__/: main.py
grammars/dir/: main.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  (+5 more)
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  models.py  roomtest.json  serializers.py  tests.py  url.py  urls.py  views.py
users/: admin.py  kakao.json  models.py  serializer.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+17 files in other folders)
